# Landcraft

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
.github/actions/build_linux/: action.yml
.github/actions/build_windows/: action.yml
.github/actions/compress_artifacts/: action.yml
.github/actions/install_tools/: action.yml
.github/actions/publish_release/: action.yml
.github/actions/run_tests/: action.yml
.github/workflows/: build_and_release.yml
scripts/: build_linux.sh  build_windows.bat  clean_linux.sh  clean_windows.bat  conan_installer.bat
src/: IsometricProjection.cpp  IsometricProjection.hpp  ScreenMap.cpp  ScreenMap.hpp  Tile.cpp  Tile.hpp  TileCorner.hpp  WorldManager.cpp  WorldManager.hpp  WorldMap.cpp  WorldMap.hpp  WorldView.cpp  WorldView.hpp  main.cpp
